[gd_scene load_steps=17 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/UI/toastytown-logo-bycindyli.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/UI/cindys-town.png" type="Texture" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://CustomizeCharButtonStyle.tres" type="Theme" id=5]
[ext_resource path="res://assets/sprites/UI/FatPix-SVG.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 13
outline_color = Color( 0.384314, 0.294118, 0.176471, 1 )
extra_spacing_top = 1
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.807843 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.752941 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.678431, 0.619608, 0.533333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.513726, 0.443137, 0.345098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.435294, 0.352941, 0.239216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.384314, 0.294118, 0.176471, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 4 )
Button/styles/disabled = SubResource( 8 )
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 7 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
target_scene = "res://CustomizeChar.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.47451 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 161, 66 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="StartContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -70.0
margin_right = 38.0

[node name="NewGame" type="Button" parent="CanvasLayer/StartContainer"]
margin_right = 76.0
margin_bottom = 13.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.984314, 0.92549, 1 )
text = "NEW GAME"

[node name="QuitButton" type="Button" parent="CanvasLayer/StartContainer"]
margin_top = 17.0
margin_right = 76.0
margin_bottom = 30.0
focus_neighbour_bottom = NodePath("../NewGame")
theme = ExtResource( 4 )
text = "QUIT"

[node name="EnterName" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -75.0
margin_right = 38.0

[node name="Label" type="Label" parent="CanvasLayer/EnterName"]
margin_right = 76.0
margin_bottom = 7.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.384314, 0.294118, 0.176471, 1 )
text = "Enter your name"
align = 1
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/EnterName"]
anchor_right = 0.035
margin_top = 11.0
margin_right = 76.0
margin_bottom = 25.0
focus_neighbour_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.435294, 0.301961, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1

[node name="StartButton" type="Button" parent="CanvasLayer/EnterName"]
margin_top = 29.0
margin_right = 76.0
margin_bottom = 42.0
rect_min_size = Vector2( 50, 13 )
theme = SubResource( 11 )
custom_colors/font_color = Color( 1, 0.984314, 0.92549, 1 )
text = "START"

[connection signal="pressed" from="CanvasLayer/StartContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/StartContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="CanvasLayer/StartContainer/QuitButton" to="." method="_on_QuitButton_toggled"]
[connection signal="text_changed" from="CanvasLayer/EnterName/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="CanvasLayer/EnterName/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="CanvasLayer/EnterName/StartButton" to="." method="_on_StartButton_pressed"]
